adjust the more button on mobile and make sure the live links stays correct size at fixed position

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -5727,6 +5727,9 @@ category: Components
         max-height: 35vh; } }
   .live-links.live-links--fixed {
     position: fixed; }
+    @media screen and (min-width: 768px) {
+      .live-links.live-links--fixed {
+        width: 225px; } }
 
 #popup-player-livestream .live-links {
   display: block;
@@ -5840,7 +5843,7 @@ category: Components
   right: auto; }
 
 .live-links--more {
-  display: block;
+  display: none;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -5853,6 +5856,7 @@ category: Components
   transition: all 200ms ease-in-out; }
   @media screen and (min-width: 768px) {
     .live-links--more {
+      display: block;
       width: 225px; } }
   .live-links--more.show-more--muted {
     display: none; }
