--- a/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
+++ b/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
@@ -1235,6 +1235,10 @@ category: Components
 
 	&.live-links--fixed {
 		position: fixed;
+
+		@include bp(medium) {
+			width: 225px;
+		}
 	}
 }
 
@@ -1386,7 +1390,7 @@ category: Components
 }
 
 .live-links--more {
-	display: block;
+	display: none;
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -1398,6 +1402,7 @@ category: Components
 
 
 	@include bp(medium) {
+		display: block;
 		width: 225px;
 	}
 
