--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -5737,6 +5737,9 @@ category: Components
         max-height: 35vh; } }
   .live-links.live-links--fixed {
     position: fixed; }
+    @media screen and (min-width: 768px) {
+      .live-links.live-links--fixed {
+        width: 225px; } }
 
 #popup-player-livestream .live-links {
   display: block;
@@ -5850,7 +5853,7 @@ category: Components
   right: auto; }
 
 .live-links--more {
-  display: block;
+  display: none;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -5863,6 +5866,7 @@ category: Components
   transition: all 200ms ease-in-out; }
   @media screen and (min-width: 768px) {
     .live-links--more {
+      display: block;
       width: 225px; } }
   .live-links--more.show-more--muted {
     display: none; }
